--- a/Controle_PID_de_Sistemas_Dinâmicos.ipynb
+++ b/Controle_PID_de_Sistemas_Dinâmicos.ipynb
@@ -6,7 +6,7 @@
       "name": "Controle PID de Sistemas Dinâmicos.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOShuxmaB2iRV01Y4cZEzMp",
+      "authorship_tag": "ABX9TyM+Gtg3tGwgjg0XBGXTe1ve",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -151,7 +151,6 @@
         "id": "maWNi4N4V0nW"
       },
       "source": [
-        "#!pip install slycot   # optional\r\n",
         "!pip install control"
       ],
       "execution_count": null,
@@ -166,7 +165,7 @@
         "import numpy as np\r\n",
         "import control as control\r\n",
         "import matplotlib.pyplot as plt\r\n",
-        "from control.matlab import *           # package for control theory calculations"
+        "from control.matlab import *           "
       ],
       "execution_count": 2,
       "outputs": []
