--- a/Controle_PID_de_Sistemas_Dinâmicos.ipynb
+++ b/Controle_PID_de_Sistemas_Dinâmicos.ipynb
@@ -6,7 +6,7 @@
       "name": "Controle PID de Sistemas Dinâmicos.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM+Gtg3tGwgjg0XBGXTe1ve",
+      "authorship_tag": "ABX9TyP2ezjSdfE5MWhTbGV9dq8d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
         "**Saída: y** - Esta variável é a resposta real do sistema à nossa resposta desejada (a entrada) que passou por nosso sistema montado (planta). O desempenho do sistema é julgado pela comparação da saída com a entrada, visto que certos erros ocorrerão.\r\n",
         "\r\n",
         "Portanto, a função transferência em malha fechada do sistema na figura acima é dada por, \r\n",
-        "$$\\frac{R(s)}{Y(s)}= \\frac{C(s)\\cdot G(s)}{1+C(s)\\cdot G(s)} $$"
+        "$$\\frac{R(s)}{Y(s)}= \\frac{C(s)\\cdot P(s)}{1+C(s)\\cdot P(s)} $$"
       ]
     },
     {
