--- a/Controle_no_Espaço_de_Estados_Observadores_de_Estado.ipynb
+++ b/Controle_no_Espaço_de_Estados_Observadores_de_Estado.ipynb
@@ -6,7 +6,7 @@
       "name": "Controle no Espaço de Estados: Observadores de Estado.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP4F3Oy16pOLFyGzW91E20r",
+      "authorship_tag": "ABX9TyNO2brh15wVrEXvQUnBtwkw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,7 +87,10 @@
         "\n",
         "Considere o seguinte sistema \n",
         "\n",
-        "$$\\dot{x}(t) = \\left[\\begin{array}{cc}-1 & 2 \\\\ 2 & -1 \\end{array} \\right] x(t)+ \\left[\\begin{array}{c}1 \\\\ 0 \\end{array} \\right] u(t)$$\n",
+        "\\begin{equation}\n",
+        "\\dot{x}(t) = \\left[\\begin{array}{cc}-1 & 2 \\\\ 2 & -1 \\end{array} \\right] x(t)+ \\left[\\begin{array}{c}1 \\\\ 0 \\end{array} \\right] u(t)\n",
+        "\\end{equation}\n",
+        "\n",
         "\n",
         "$$y(t)= \\left[\\begin{array}{cc}0 & 1 \\end{array} \\right] x(t)$$"
       ]
