--- a/Controle_no_Espaço_de_Estados_Observadores_de_Estado.ipynb
+++ b/Controle_no_Espaço_de_Estados_Observadores_de_Estado.ipynb
@@ -6,7 +6,7 @@
       "name": "Controle no Espaço de Estados: Observadores de Estado.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNO2brh15wVrEXvQUnBtwkw",
+      "authorship_tag": "ABX9TyMjiMGwSjZ/LWx7KOP8jsvD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,9 +72,10 @@
         "import numpy as np\n",
         "import control as control\n",
         "import matplotlib.pyplot as plt\n",
-        "from control.matlab import *"
+        "from control.matlab import *\n",
+        "from numpy.linalg import matrix_rank"
       ],
-      "execution_count": 3,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -127,6 +128,31 @@
         "\n",
         "  A matriz de observabilidade é dada por: \n",
         "  $$O = \\left[C\\:\\: CA \\:\\: CA^2 \\: \\ldots \\: CA^{n-1}\\right]^T $$"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EUXQvoQvwqZP",
+        "outputId": "218335f4-c310-4053-e15e-87d8b8784401"
+      },
+      "source": [
+        "O=obsv(A, C) #A função obsv retorna a matriz de observabilidade\n",
+        "posto=matrix_rank(O) \n",
+        "print(\"Posto da matriz O:=\",posto )"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Posto da matriz O:= 2\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
