--- a/Controle_no_Espaço_de_Estados_Observadores_de_Estado.ipynb
+++ b/Controle_no_Espaço_de_Estados_Observadores_de_Estado.ipynb
@@ -6,7 +6,7 @@
       "name": "Controle no Espaço de Estados: Observadores de Estado.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMjiMGwSjZ/LWx7KOP8jsvD",
+      "authorship_tag": "ABX9TyPZg4EIb4Zu7S+XQODHi2uT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,31 @@
       "source": [
         "# Controle no Espaço de Estados: Observadores de Estado\n",
         "\n",
-        "O observador de estados consiste em um mecanismo para estimação dos estados do sistema. É uma solução útil quando os estados reais da planta não estão accessíveis, situação muito comum na prática."
+        "* O observador de estados consiste em um mecanismo para estimação dos estados do sistema. É uma solução útil quando os estados reais da planta não estão accessíveis, situação muito comum na prática.\n",
+        "\n",
+        "* O objetivo é estimar os valores das variáveis de estado $x(t)$ que não são medidas. \n",
+        "\n",
+        "O sistema no espaço de estado é dado por, \n",
+        "\\begin{equation}\n",
+        "\\dot{x}(t)= A x(t) + Bu(t)\n",
+        "\\end{equation}\n",
+        "\\begin{equation}\n",
+        "y(t)= C x(t)\n",
+        "\\end{equation}\n",
+        "\n",
+        "Já o observador: \n",
+        "\\begin{equation}\n",
+        "\\dot{\\hat{x}}(t)= A \\hat{x}(t) + Bu(t)\n",
+        "\\end{equation}\n",
+        "\\begin{equation}\n",
+        "\\hat{y}(t)= C \\hat{x}(t)\n",
+        "\\end{equation}\n",
+        "em que $\\hat{x}(t)$ é o vetor dos estados estimados. \n",
+        "O observador em malha fechada é dado por, \n",
+        "\\begin{equation}\n",
+        "\\dot{\\hat{x}}(t)= A \\hat{x}(t) + Bu(t) - L (y(t)-\\hat{y}(t)),\n",
+        "\\end{equation}\n",
+        "em que $L$ é o ganho do observador. "
       ]
     },
     {
